// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets massages full saved state correctly 1`] = `
jl {
  "B": null,
  "F": 139268,
  "f": Array [
    "byAddress",
    jl {
      "B": null,
      "F": 139268,
      "f": Array [
        "0x9df0e9759b17f34e9123adbe6d3f25d54b72ad6a",
        jl {
          "B": null,
          "F": 139268,
          "f": Array [
            "address",
            "0x9df0e9759b17f34e9123adbe6d3f25d54b72ad6a",
            "own",
            jl {
              "B": null,
              "F": 139268,
              "f": Array [
                "name",
                "Alice",
                "phone",
                "555-555-5555",
                "connections",
                jl {
                  "B": null,
                  "F": 139268,
                  "f": Array [
                    "knows",
                    gi {
                      "B": null,
                      "F": 139268,
                      "ib": jl {
                        "B": null,
                        "F": 139268,
                        "f": Array [
                          "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
                          null,
                        ],
                        "h": 1,
                        "s": 16647951,
                        "u": null,
                      },
                      "s": 15077647,
                      "u": null,
                    },
                    "worksWith",
                    gi {
                      "B": null,
                      "F": 139268,
                      "ib": jl {
                        "B": null,
                        "F": 139268,
                        "f": Array [
                          "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
                          null,
                          "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
                          null,
                        ],
                        "h": 2,
                        "s": 16647951,
                        "u": null,
                      },
                      "s": 15077647,
                      "u": null,
                    },
                  ],
                  "h": 2,
                  "s": 16647951,
                  "u": null,
                },
              ],
              "h": 3,
              "s": 16647951,
              "u": null,
            },
            "activities",
            jl {
              "B": null,
              "F": 139268,
              "f": Array [
                "10",
                jl {
                  "B": null,
                  "F": 139268,
                  "f": Array [
                    "id",
                    10,
                    "type",
                    "transaction",
                    "client_id",
                    "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
                    "to",
                    "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
                  ],
                  "h": 4,
                  "s": 16647951,
                  "u": null,
                },
                "11",
                jl {
                  "B": null,
                  "F": 139268,
                  "f": Array [
                    "id",
                    11,
                    "type",
                    "transaction",
                    "client_id",
                    "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
                    "to",
                    "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
                  ],
                  "h": 4,
                  "s": 16647951,
                  "u": null,
                },
              ],
              "h": 2,
              "s": 16647951,
              "u": null,
            },
          ],
          "h": 3,
          "s": 16647951,
          "u": null,
        },
      ],
      "h": 1,
      "s": 16647951,
      "u": null,
    },
    "currentIdentity",
    "0x9df0e9759b17f34e9123adbe6d3f25d54b72ad6a",
  ],
  "h": 2,
  "s": 16647951,
  "u": null,
}
`;

exports[`sets massages identity correctly 1`] = `
jl {
  "B": null,
  "F": 139268,
  "f": Array [
    "address",
    "0x9df0e9759b17f34e9123adbe6d3f25d54b72ad6a",
    "own",
    jl {
      "B": null,
      "F": 139268,
      "f": Array [
        "name",
        "Alice",
        "phone",
        "555-555-5555",
        "connections",
        jl {
          "B": null,
          "F": 139268,
          "f": Array [
            "knows",
            gi {
              "B": null,
              "F": 139268,
              "ib": jl {
                "B": null,
                "F": 139268,
                "f": Array [
                  "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
                  null,
                ],
                "h": 1,
                "s": 16647951,
                "u": null,
              },
              "s": 15077647,
              "u": null,
            },
            "worksWith",
            gi {
              "B": null,
              "F": 139268,
              "ib": jl {
                "B": null,
                "F": 139268,
                "f": Array [
                  "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
                  null,
                  "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
                  null,
                ],
                "h": 2,
                "s": 16647951,
                "u": null,
              },
              "s": 15077647,
              "u": null,
            },
          ],
          "h": 2,
          "s": 16647951,
          "u": null,
        },
      ],
      "h": 3,
      "s": 16647951,
      "u": null,
    },
    "activities",
    jl {
      "B": null,
      "F": 139268,
      "f": Array [
        "10",
        jl {
          "B": null,
          "F": 139268,
          "f": Array [
            "id",
            10,
            "type",
            "transaction",
            "client_id",
            "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
            "to",
            "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
          ],
          "h": 4,
          "s": 16647951,
          "u": null,
        },
        "11",
        jl {
          "B": null,
          "F": 139268,
          "f": Array [
            "id",
            11,
            "type",
            "transaction",
            "client_id",
            "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
            "to",
            "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
          ],
          "h": 4,
          "s": 16647951,
          "u": null,
        },
      ],
      "h": 2,
      "s": 16647951,
      "u": null,
    },
  ],
  "h": 3,
  "s": 16647951,
  "u": null,
}
`;
